Updated button backgrounds / fixed text sizinf on mobile

--- a/app/assets/stylesheets/button.scss
+++ b/app/assets/stylesheets/button.scss
@@ -6,6 +6,7 @@
   font-size: 1.5rem;
   width:100%;
   color: #f9f2de;
+  background-color: rgba(200,200,200,0.2);
 }
 
 .btn-main:hover, .btn-back:hover, .btn-log-out{
@@ -19,11 +20,12 @@
 .btn-back{
   font-size:3rem;
   border-color:#262626;
+  background-color: rgba(200,200,200,0.2);
 }
 
 .btn-character{
   font-size: 1.5rem;
-  border-color: grey;
+  border-color: #262626;
   background-color: rgba(30,30,30,0.2);
   width: 100%;
   color:#f9f2de;
